# template-python-gladkii

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  openapi.yaml  pyproject.toml  tox.ini
.github/actions/: build_web.yaml  test.yaml
.github/workflows/: build_lib.yaml  build_web.yaml  deploy.yaml  test_and_build.yaml  test_build_release.yaml  test_build_release.yml
app/: example.py  items.py  main.py  main_classy.py
app/tests/: test_example.py  test_items.py  test_main.py
charts-repo/: app-3.2.1-dev.15.main.5bdebef7.tgz  app-3.2.1-dev.16.main.75fe2c71.tgz  app-3.2.1-dev.17.main.2797250b.tgz  app-3.2.1-dev.4.main.89aade70.tgz  app-3.2.1-dev.4.main.e7c365a6.tgz  index.yaml
charts/app/: Chart.yaml  values.yaml
charts/app/templates/: deployment.yaml
openapi/: openapi.yaml
tools/: deploy_k8s.sh  extract_openapi.py  helm_chart_repo.sh  version.sh
